# aqualog

./: .gitignore  .gitmodules  Caddyfile  README.md  Taskfile.yml  docker-compose.yml
assets/: account_confirmation.html
authentik/: authentik.cnf  docker-compose.yml
authentik/terraform/: .terraform.lock.hcl  app-aqualog-api.tf  auth-flow.tf  auth-google.tf  main.tf  provider.tf  variables.tf
cloudflare/: routeros.md
cloudflare/terraform/: cloudflare.tf  providers.tf
digital_ocean/ansible/: .gitignore  README.md  ansible.cfg  pyproject.toml  vars.example.yml
digital_ocean/ansible/inventory/: digitalocean.yml
digital_ocean/ansible/playbooks/: aquahub.yml  aqualog.yml  base.yml
digital_ocean/ansible/roles/aqualog/defaults/: main.yml
digital_ocean/ansible/roles/aqualog/handlers/: main.yml
digital_ocean/ansible/roles/aqualog/tasks/: main.yml
digital_ocean/ansible/roles/aqualog/templates/: docker-compose.yml.j2  env.j2  nginx.conf.j2  service-restart.sh
digital_ocean/ansible/roles/base/tasks/: main.yml
digital_ocean/ansible/roles/docker/tasks/: main.yml
digital_ocean/kube-configs/: README.md  auth-db.yaml  auth-server.yaml  backend.yaml  ingress.yaml  production_issuer.yaml
digital_ocean/terraform/: .terraform.lock.hcl  main-dns.tf  main-droplets.tf  main-kubernetes.tf  main.tf  provider.tf
proxy/: Caddyfile  README.md  docker-compose.yml
tools/: setup_authentik.py
