[project]
name = "ansible-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "Cylindric",email = "mark@hanfordonline.co.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "ansible",
    "pydo"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
